Add DELETE invidivduals, but not in testing yet
